--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
-.body{
+body{
 	margin: 0 auto;
 	max-width: 50em;
+	font-family: Courier new;
+	line-height: 1.5;
+  padding: 4em 1em;
+  color: #555;
+}
+
+h1, strong {
+	color: #333;
 }
